--- a/helpmenu.html
+++ b/helpmenu.html
@@ -90,7 +90,7 @@
                                             Weather: Plan a trip before you go. Check the weather forecast at home and at your desitination<br>
                                             HVAC and Seats: Hot or cold outside? Seat a little stiff? Fix it here!<br>
                                             Radio and CD: Want to listen to the newest hit single, or a classic? This is the radio and CD controls<br>
-                                            Driver Mode: Eager to get the most out of your drive? You know best. Modify the preformance here.<br>
+                                            Driver Mode: Eager to get the most out of your drive? You know best. Modify the performance here.<br>
                     </p>
                     <p class="newDriver_h3">Please practice hands free driving while using this, and any application.
                                             In order to make this app more driver friendly,
