Fixed links to images which weren't showing up in Camera Logs

--- a/camera-logs.html
+++ b/camera-logs.html
@@ -31,7 +31,7 @@
                         <div class="firstrow-timestamp">08/10/2018 09:00 AM</div>
                     </div>
                     <div class="camera-snap">
-                        <img src="image/cameralog2.jpg" class="cam-thumbnail" alt="dashcam footage">
+                        <img src="image/cameralog2.png" class="cam-thumbnail" alt="dashcam footage">
                         <div class="firstrow-timestamp">08/11/2018 09:00 AM</div>
                     </div>
                     <div class="camera-snap">
